# SwarmGraph

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  labels.yml
.github/ISSUE_TEMPLATE/: agent_review.yml  agent_task.yml  bug_report.md  config.yml  feature_request.md  security_report.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml  security.yml
docs/: INSTALL.md  index.md
docs/adr/: 0001-monorepo-structure.md  0002-pydantic-v2-discipline.md  0003-multi-tenant-quota.md  0004-audit-signing-hmac-chain.md
docs/architecture/: audit-signing.md  consensus-protocols.md  langgraph-graph.md  multi-tenant-quota.md  overview.md  pydantic-discipline.md
docs/getting-started/: installation.md  quickstart.md  smoke-tests.md
docs/history/: HIVE_ANALYSIS_REPORT.md  MANIFEST.md  PATCH_REPORT_2026-05-07.md  README.md
docs/history/analysis-2026-05-07/: README.md  consensus_log.jsonl  create_zip.py  fix_plan.md  ruflo_mapping_check.md
docs/history/analysis-2026-05-07/agents/: agent_02_topology.md  (+29 more)
docs/history/consensus_logs/: phase2.jsonl
docs/history/orchestrator-prompts/: 00_analysis.md  01_patch_and_complete.md  04_gateway.md  05_v5.md  06_v6.md  07.1_v7.1.md  07_v7.md  08_v8.md
docs/operations/: audit-verification.md  cost-tracking.md  deployment.md  flutter-local-agent-handover.md  flutter-local-agent-profile.md  github-setup.md  orbstack-local-isolation.md  production-checklist.md  production-profile.md  release-prep-handover-0.8.1.md  secret-scanning.md  security.md  troubleshooting.md  vault-backup-restore.md
docs/reference/: env-vars.md  gateway-cli.md  hive-swarm-api.md  swarm-shared-api.md
docs/upstream/: ai-coder-hardening-improved.md
docs/upstream/ruflo/: PATCH_NOTE_2026-05-07.md
examples/: 01_smoke_stub_mode.py  03_audit_signing.py  04_multi_tenant_quota.py  05_streaming_hitl.py  06_embedding_anti_drift.py
scripts/: benchmark_swarm.py  create_release_zip.py  export_agent_workspace.sh  generate_license_report.py  generate_sbom.py  install.sh  sync_github_labels.py  validate_sbom.py  verify_audit_log.sh
swarmMain/ai-coder-hardening-improved/: ANALYSIS_AND_REVIEW.md  IMPROVEMENTS_PROMPT.md  PACKAGE_MANIFEST.md  README.md  REPORT.html  RESEARCH.md  create_zip.py  pyproject.toml
swarmMain/ai-coder-hardening-improved/src/ai_coder/: __init__.py
swarmMain/ai-coder-hardening-improved/src/ai_coder/memory/: lesson.py
swarmMain/ai-coder-hardening-improved/src/ai_coder/workflow/: checkpoints.py  nodes.py  state.py
swarmMain/ai-coder-hardening-improved/tests/: test_checkpoint_atomic_write.py  test_fail_closed_comprehensive.py  test_memo_lesson_hardening.py  test_workflow_state_hardening.py
swarmMain/ai-provider-swarm-gateway/: .env.example  ARCHITECTURE.md  COMPLIANCE.md  MISSION_LOCK.md  PROJECT_REVIEW.md  PROVIDER_REGISTRY.md  README.md  SETUP.md  pyproject.toml
swarmMain/ai-provider-swarm-gateway/src/ai_provider_swarm_gateway/: __init__.py  cli.py
swarmMain/ai-provider-swarm-gateway/src/ai_provider_swarm_gateway/consensus/: strategies.py
swarmMain/ai-provider-swarm-gateway/src/ai_provider_swarm_gateway/dashboard/: app.py
swarmMain/ai-provider-swarm-gateway/src/ai_provider_swarm_gateway/graph/: nodes.py
swarmMain/ai-provider-swarm-gateway/src/ai_provider_swarm_gateway/models/: credentials.py  provider.py  quota.py  state.py
swarmMain/ai-provider-swarm-gateway/src/ai_provider_swarm_gateway/policy/: guardrails.py
swarmMain/ai-provider-swarm-gateway/src/ai_provider_swarm_gateway/providers/: mock_adapter.py  qwen_adapter.py
swarmMain/ai-provider-swarm-gateway/src/ai_provider_swarm_gateway/quota/: __init__.py  tracker.py
swarmMain/ai-provider-swarm-gateway/src/ai_provider_swarm_gateway/registry/: loader.py  providers.yaml
swarmMain/ai-provider-swarm-gateway/tests/: test_e2e.py  test_graph.py  test_models.py  test_policy.py  test_provider_adapters.py  test_quota.py  test_registry.py  test_routing.py
swarmMain/hive-swarm/: HIVE_LEADER_SYNTHESIS.md  MISSION_LOCK.md  pyproject.toml
swarmMain/hive-swarm/swarm/: __init__.py
swarmMain/hive-swarm/swarm/graphs/: __init__.py  factory.py
swarmMain/hive-swarm/swarm/models/: __init__.py  agent.py  base.py  config.py  consensus.py  memory.py  state.py  task.py  types.py
swarmMain/hive-swarm/swarm/nodes/: __init__.py  approval.py  checkpointing.py  consensus.py  judge.py  queen.py  router.py  sona.py  worker.py
swarmMain/hive-swarm/tests/: test_consensus.py  test_e2e.py  test_models.py  test_sona_memory.py  test_topologies.py
swarmMain/ruflo-swarm-prompt/: RUFLO_RESEARCH_NOTES.md  RUFLO_SWARM_PYDANTIC_LANGGRAPH_PROMPT.md
tests/fixtures/secret_shapes/: README.md  fake_firebase_options.dart
tests/regression/: test_secret_scanning_planted.py
(+83 files in other folders)
