[project]
name = "swarmgraph"
version = "0.8.0"
description = "Pydantic v2 + LangGraph swarm framework with multi-provider gateway"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "swarm-shared",
    "hive-swarm[langgraph]",
    "ai-provider-swarm-gateway[yaml,langgraph]",
]

[tool.uv.workspace]
members = [
    "packages/swarm-shared",
    "packages/hive-swarm",
    "packages/ai-provider-swarm-gateway",
]

[tool.uv.sources]
swarm-shared = { workspace = true }
hive-swarm = { workspace = true }
ai-provider-swarm-gateway = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=1.3,<2",
    "pytest-cov>=5.0,<7",
    "hypothesis>=6.110",
    "ruff>=0.6,<1",
    "bandit>=1.8,<2",
    "pip-audit>=2.8,<3",
    "pyright>=1.1.380",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
]

[tool.pytest.ini_options]
testpaths = [
    "packages/swarm-shared/tests",
    "packages/hive-swarm/tests",
    "packages/ai-provider-swarm-gateway/tests",
]
addopts = "-q --tb=short --strict-markers --import-mode=importlib"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:langchain.*",
    "ignore::PendingDeprecationWarning:langchain.*",
    "ignore:.*allowed_objects.*",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101"]
"examples/**" = ["S101"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "off"
include = [
    "packages/swarm-shared/swarm_shared",
    "packages/hive-swarm/swarm",
    "packages/ai-provider-swarm-gateway/src",
]
reportMissingImports = false
reportMissingModuleSource = false
