[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-coder-hardening"
version = "0.8.0-improved"
description = "Hardened AI coding agent with checkpointed LangGraph workflows and typed Pydantic boundaries"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.7.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
langgraph = [
    "langgraph>=0.3.0",
    "langgraph-checkpoint>=2.0.0",
]
litellm = [
    "litellm>=1.40.0",
]
pydantic-ai = [
    "pydantic-ai>=0.0.14",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
]
all = [
    "ai-coder-hardening[langgraph,litellm,pydantic-ai,dev]",
]

[project.scripts]
ai-coder = "ai_coder.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "S", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/ai_coder"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
