[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-provider-swarm-gateway"
version = "0.1.0"
description = "Safe, compliant, auditable AI provider routing gateway — Pydantic v2 + LangGraph + swarm consensus"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7.0",
  "pyyaml>=6.0",
  "typer>=0.12.0",
  "rich>=13.0",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
langgraph = ["langgraph>=0.3.0"]
dashboard = ["streamlit>=1.30.0", "pandas>=2.0"]
test      = ["pytest>=8.0", "pytest-cov>=5.0"]
providers = [
  "openai>=1.0",
  "anthropic>=0.25",
  "google-generativeai>=0.5",
  "groq>=0.9",
  "cohere>=5.0",
]
all = [
  "ai-provider-swarm-gateway[langgraph,dashboard,test,providers]"
]

[project.scripts]
ai-provider-gateway = "ai_provider_swarm_gateway.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_provider_swarm_gateway"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-q --tb=short"

[tool.coverage.run]
source = ["src"]
